--- a/vpc.yaml
+++ b/vpc.yaml
@@ -1,17 +1,24 @@
-AWSTemplateFormatVersion: '2010-09-09'
-Description: 'CloudFormation for VPC'
+AWSTemplateFormatVersion: "2010-09-09"
+Description: "CloudFormation for VPC"
 
 Resources:
   MyVPC:
-    Type: 'AWS::EC2::VPC'
+    Type: "AWS::EC2::VPC"
     Properties:
-      CidrBlock: '172.16.0.0/16'
+      CidrBlock: "172.16.0.0/16"
       EnableDnsSupport: true
       EnableDnsHostnames: true
       Tags:
-         - Key: Name
-           Value: MyVpc
+        - Key: Name
+          Value: MyVpc
 
-
-
-
+  PublicSubnet1A:
+    Type: "AWS::EC2::Subnet"
+    Properties:
+      VpcId: !Ref MyVPC
+      CidrBlock: "172.16.1.0/24"
+      AvailabilityZone: !Select [0, !GetAZs ""]
+      MapPublickIpOnLaunch: true
+      Tags:
+        - Key: Name
+          Value: PublicSubnet1A
