Data Private Subnet in AZ2

--- a/vpc.yaml
+++ b/vpc.yaml
@@ -2,6 +2,7 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: "CloudFormation for VPC"
 
 Resources:
+# My VPC
   MyVPC:
     Type: "AWS::EC2::VPC"
     Properties:
@@ -11,7 +12,7 @@ Resources:
       Tags:
         - Key: Name
           Value: MyVpc
-
+#Punlic Subnet in AZ1       
   PublicSubnet1A:
     Type: "AWS::EC2::Subnet"
     Properties:
@@ -22,7 +23,7 @@ Resources:
       Tags:
         - Key: Name
           Value: PublicSubnet1A
-
+#App Private Subnet in AZ1  
   AppPrivateSubnet1A:
     Type: "AWS::EC2::Subnet"
     Properties:
@@ -32,13 +33,46 @@ Resources:
       Tags:
         - Key: Name
           Value: AppPrivateSubnet1A
-
+#Data Private Subnet in AZ1  
   DataPrivateSubnet1A:
     Type: "AWS::EC2::Subnet"
     Properties:
       VpcId: !Ref MyVPC
       CidrBlock: "172.16.3.0/24"
-      AvailablitityZone: !Select [0, !GetAZs ""]
+      AvailabilityZone: !Select [0, !GetAZs ""]
       Tags:
         - Key: Name
           Value: DataPrivateSubnet1A
+#Punlic Subnet in AZ2  
+  PublicSubnet2B:
+    Type: 'AWS;:EC2::Subnet'
+    Properties:
+       VpcId: !Ref MyVPC
+       CidrBlock: '172.16.4.0/24'  
+       AvailabilityZone: !Select [1, !GetAZs '']
+       MapPublicIpOnLaunch: true
+       Tags:
+         - Key: Name
+           Value: PublicSubnet2B
+#App Private Subnet in AZ2  
+  AppPrivateSubnet2B:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+       VpcId: !Ref MyVPC
+       CidrBlock: '172.16.5.0/24'
+       AvailabilityZone: !Select [1, !GetAZs '']
+       Tags:
+        - Key: Name
+          Value: AppPrivateSubnet2B
+#Data Private Subnet in AZ2  
+  DataPrivateSubnet2B:
+    Type: 'AWS::EC2::Subnet'
+    Properties:
+       VpcId: !Ref MyVPC
+       CidrBlock: '172.16.6.0/24'
+       AvailabilityZone: !Select [1, !GetAZs '']
+       Tags:
+        - Key: Name
+          Value: DataPrivateSubet2B
+
+       
