--- a/vpc.yaml
+++ b/vpc.yaml
@@ -126,7 +126,7 @@ Resources:
     Type: "AWS::EC2::Instance"
     Properties:
       InstanceType: t2.micro
-      KeyName: !Ref bastion
+      KeyName: bastion
       ImageId: ami-0b2ed2e3df8cf9080
       SubnetId: !Ref PublicSubnet1A
       SecurityGroupIds:
@@ -134,3 +134,15 @@ Resources:
       Tags:
         - Key: Name
           Value: BastionHost
+
+  #Bastion Security Group
+  BastionSG:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      GroupDescription: "Enable SSH access"
+      VpcId: !Ref MyVPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 22
+          ToPort: 22
+          CidrIp: 5.151.198.139/32
