--- a/iam.yaml
+++ b/iam.yaml
@@ -8,3 +8,29 @@ Resources:
       UserName: "HannaCFN"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/AdministratorAccess"
+  #My IAM Group
+  MyIAMGroup:
+    Type: 'AWS::IAM::Group'
+    Properties:
+      GroupName: 'HannaCFN'
+
+   # Attach User to Group
+  UserToGroup:   
+     Type: 'AWS:;IAM::UserToGroupAddition'
+     Properties:
+       GroupName: !Ref MyIAMGroup
+       Users:
+         - !Ref MyIAMUser
+
+   # IAM Role for EC2
+  MyIAMRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          -Effect: 'Allow'
+          Principle:
+            Service:['ec2.amazonaws.com']
+          Action:['sts:AssumeRole']    
+
