--- a/asg.yaml
+++ b/asg.yaml
@@ -120,3 +120,75 @@ Resources:
     Properties:
       SubnetId: !Ref PublicSubnet1A
       RouteTableId: !Ref PublicRouteTable
+
+  #Web Server/ ALB security Group
+  WebServerSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      GroupDescription: "Enable HTTP Access"
+      VpcId: !Ref MyVPC
+      SecurityGroupIngress:
+        - IpProtocol: "tcp"
+          FromPort: "80"
+          ToPort: "80"
+          CidrIp: "0.0.0.0/0"
+
+  # Launch Config
+  MyLaunchConfiguration:
+    Type: "AWS::AutoScaling::LaunchConfiguration"
+    Properties:
+      ImageId: "ami-0b2ed2e3df8cf9080"
+      InstanceType: "t2.micro"
+      SecurityGroups:
+        - !Ref WebServerSecurityGroup
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          yum install -y httpd
+          systemctl start httpd
+          systemctl enable httpd
+          echo "Hello from instance 1A" >/var/www/html/index.html
+
+  #ASG
+  MyAutoScalingGroup:
+    Type: 'AWS::AutoScaling::AutoScalingGroup'
+    Properties:
+      LaunchConfigurationName: ! Ref MyLaunchConfiguration
+      MinSize: 1
+      MaxSize: 3
+      DesiredCapacity: 2
+      VPCzoneIdentifier:
+        - !Ref PublicSubnet1A
+        - !Ref PublicSubnet2B
+
+  # Alarm
+  HighCPUAlarm:
+    Type: 'AWS::CloudWatch::Alarm'
+    Properties:
+      AlarmDescriotion: 'Alarm when CPU exceeds 70%'
+      MetricName: 'CPUUtilization'
+      NameSpace: 'AWS/EC2'
+      Statistics: Avergae
+      Period: 300
+      EvaluationPeriods: '1'
+      Threshold: 70
+      ComparisonOperator: GreaterThanThreshold
+      Dimension:
+        - Name: AutoScalingGroupName
+          Value: !Ref MyAutoScalingGroup
+      AlarmActions:
+        - !Ref ScaleOutPolicy
+
+  # Scale Out Policy 
+  ScaleOutPolicy:
+    Type: 'AWS::AutoScaling::ScalingPolciy'
+    Properties:
+      AutoScalingGroupName: !Ref MyAutoScalingGroup
+      PolicyType: SimpleScaling
+      ScalingAdjustment: '1'
+      CoolDown: '300'
+      AjustmentType: ChangeInCapacity
+      
+
+
+
