--- a/ec2.yaml
+++ b/ec2.yaml
@@ -133,20 +133,74 @@ Resources:
 
   # Target Group For ALB
   MyTargetGroup:
-    Type: "AWS::ElasticaLoadBalancingV2::TargetGroup"
+    Type: "AWS::ElasticLoadBalancingV2::TargetGroup"
     Properties:
       VpcId: !Ref MyVPC
       Port: 80
       Protocol: "HTTP"
+      Targets:
+        - Id: !Ref WebServerInstance1A
+        - Id: !Ref WebServerInstance2B
 
   # Listener for ALB
   MyListener:
-    Type: "AWS::ElasticLoadBalancing::Listener"
+    Type: "AWS::ElasticLoadBalancingV2::Listener"
     Properties:
       DefaultActions:
         - Type: "forward"
           TargetGroupARN: !Ref MyTargetGroup
-          LoadBalancerArn: !Ref MyLoadBalancer
+      LoadBalancerArn: !Ref MyLoadBalancer
       Port: 80
       Protocol: "HTTP"
-      
+
+  #Web Server/ ALB security Group
+  WebServerSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      GroupDescription: "Enable HTTP Access"
+      VpcId: !Ref MyVPC
+      SecurityGroupIngress:
+        - IpProtocol: "tcp"
+          FromPort: "80"
+          ToPort: "80"
+          CidrIp: "0.0.0.0/0"
+
+  # WebServerInstance1A
+  WebServerInstance1A:
+    Type: "AWS::EC2::Instance"
+    Properties:
+      InstanceType: "t2.micro"
+      ImageId: "ami-0b2ed2e3df8cf9080"
+      SubnetId: !Ref PublicSubnet1A
+      SecurityGroupIds:
+        - !Ref WebServerSecurityGroup
+      Tags:
+        - Key: "Name"
+          Value: "WebServerInstance1A"
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          yum install -y httpd
+          systemctl start httpd
+          systemctl enable httpd
+          echo "Hello from instance 1A" >/var/www/html/index.html
+
+  #WebServerInstance2B
+  WebServerInstance2B:
+    Type: "AWS::EC2::Instance"
+    Properties:
+      InstanceType: "t2.micro"
+      ImageId: "ami-0b2ed2e3df8cf9080"
+      SubnetId: !Ref PublicSubnet2B
+      SecurityGroupIds:
+        - !Ref WebServerSecurityGroup
+      Tags:
+        - Key: "Name"
+          Value: "WebServerInstance2B"
+      UserData:
+        Fn::Base64: !Sub |
+          #!/bin/bash
+          yum install -y httpd
+          systemctl start httpd
+          systemctl enable httpd
+          echo "Hello from instance 1A" >/var/www/html/index.html
